all most done but i have some probleme with dragula library

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,11 +13,6 @@
       </ul>
    
        <p>
-           <a href="/admin/sanitycheck " class="btn btn-sm btn-warning"><i class="icon-medkit"></i> Sanity check for schedule</a>
+           <a href="/admin/sanitycheck " class="btn btn-sm btn-warning"><fa name="medkit"></fa>Sanity check for schedule</a>
        </p>
-   
- <div class="col-lg-12 ng-scope">
-       <h3>Planners</h3>
-       <button class="btn btn-dark">Save allocation</button>
- </div>
 </div>
