--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <a class="navbar-brand" routerLink="/talk" routerLinkActive="active">Talk</a>
     <a class="navbar-brand" routerLink="/slot" routerLinkActive="active">Slot</a>
     <a class="navbar-brand" routerLink="/dragula" routerLinkActive="active">Talk and Slot</a>
-    <a href="https://devoxx.ma/" class="navbar-brand navbar-right"><i class="icon-arrow-right">Devoxx Morocco website</i></a>
+    <a href="https://devoxx.ma/" class="navbar-brand navbar-right"><fa name="arrow-right"></fa>Devoxx Morocco website</a>
   </div>
 </nav>
