--- a/src/app/components/slot/slot.component.html
+++ b/src/app/components/slot/slot.component.html
@@ -15,23 +15,33 @@
 <span class="badge badge-info float-right">Room Filter:</span>
 <br/>
 <select class='select-option form-control form-control-lg' [(ngModel)]="term">
-    <option selected>Choose...</option>
+    <option selected>Filter Room...</option>
     <option class='option' *ngFor='let so of slot'>{{so.room.id}}</option>
 </select>
 <br/>
 <span class="badge badge-pill badge-primary float-right">Available:  / {{ slot?.length }}</span>
 
 <br/>
+<!-- 
 <div class="custom-control custom-checkbox float">
                 <input type="checkbox" class="custom-control-input" id="customCheck1" [(ngModel)]="theCheckbox"  data-md-icheck (change)="toggleVisibility($event)"/>
                 <label class="custom-control-label" for="customCheck1">Show/Hide ALL the Slots</label>
 </div>
+ -->
+<!-- 
+<div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" class="form-check-input" (click)="toggleVisibility($event)">
+          Show All The Slots
+        </label>
+</div> 
 <br/>
+-->
 
-<div  *ngIf="showCheck">
-<div class="card" *ngFor="let so of slot |filter:term |filter:dateTo" draggable [dragula]='"bag-task1"' >
+<!-- <div  *ngIf="showCheck"> -->
+<div class="card" *ngFor="let so of slot |filter:term |filter:dateTo" draggable [dragula]='"section-bag"' >
      <div class="card-body">
-            <h3>{{ so.name }}</h3>
+            <!-- <h3>{{ so.name }}</h3> -->
            <span class="badge badge-warning">{{ so.day }}{{ so.to | date: 'dd/MM/yyyy hh:mm:ss' }}</span>
            <span class="badge badge-primary">{{ so.room.name }}</span>
            <span class="badge badge-success">{{ so.room.capacity }}</span>
@@ -39,7 +49,7 @@
            <span class="badge badge-danger">{{ so.room.recorded }}</span>
 </div>
 </div>
-</div>
+<!-- </div> -->
 </div>
 
 
