--- a/src/app/components/talk/talkdetails/talkdetails.component.html
+++ b/src/app/components/talk/talkdetails/talkdetails.component.html
@@ -1,6 +1,6 @@
 <br />
 <div class="container">
-  <a href="/#/talk" class="btn btn-dark btn-sm mb-3">Go Back To Talk</a>
+  <button class="btn btn-dark btn-sm mb-3" (click)="goToPage()">Go Back To Talk</button>
   <div class="card">
     <div class="card-body">
         <h3><strong>Title :  </strong>{{ talk.title }}</h3>
