--- a/src/app/components/dragdrop/dragdrop.component.html
+++ b/src/app/components/dragdrop/dragdrop.component.html
@@ -1,8 +1,28 @@
 <app-header></app-header>
 <div class='wrapper'>
   <div class="container">
-  <!-- <a (click)="goToTalks()">
-    <span class="badge badge-pill badge-info">Go To Talks Element</span></a> -->
+  
+  <div class="col-lg-12 ng-scope">
+    <h3>All Slots</h3>
+    <button class="btn btn-success btn-sm" (click)="SaveAllSchedling()" data-toggle="modal" data-target="#myModal"><fa name="paper-plane"></fa>Save allocation</button>
+  </div>
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <!-- Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Save Allocation</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>       
+          <!-- Modal body -->
+          <div class="modal-body">
+            Allocation for bof saved !!!
+          </div>
+        </div>
+      </div>
+    </div>
+<br />
   <div class="row">
   
   <div class="col-sm">
