--- a/src/app/components/dragdrop/dragdrop.component.html
+++ b/src/app/components/dragdrop/dragdrop.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
 <div class='wrapper'>
   <div class="container">
-  
-  <div class="col-lg-12 ng-scope">
-    <h3>All Slots</h3>
-    <button class="btn btn-success btn-sm" (click)="SaveAllSchedling()" data-toggle="modal" data-target="#myModal"><fa name="paper-plane"></fa>Save allocation</button>
-  </div>
+
+    <div class="col-lg-12 ng-scope">
+      <h3>All Slots</h3>
+      <button class="btn btn-success btn-sm" (click)="SaveAllSchedling()" data-toggle="modal" data-target="#myModal">
+        <fa name="paper-plane"></fa>Save allocation</button>
+    </div>
     <!-- The Modal -->
     <div class="modal fade" id="myModal">
       <div class="modal-dialog modal-lg">
@@ -14,7 +15,7 @@
           <div class="modal-header">
             <h4 class="modal-title">Save Allocation</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-          </div>       
+          </div>
           <!-- Modal body -->
           <div class="modal-body">
             Allocation for bof saved !!!
@@ -22,17 +23,17 @@
         </div>
       </div>
     </div>
-<br />
-  <div class="row">
-  
-  <div class="col-sm">
-  <app-talk></app-talk>
-  </div>
+    <br />
+    <div class="row">
 
-  <div class="col-sm">
-  <app-slot></app-slot>
+      <div class="col-sm">
+        <app-talk></app-talk>
+      </div>
+
+      <div class="col-sm">
+        <app-slot></app-slot>
+      </div>
+
+    </div>
   </div>
-  
-  </div>
-  </div>
-  </div>
+</div>
