add ng-drag components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,9 @@
     <a href="/cfpadmin" class="navbar-brand mb-0 h1" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Devoxx CFP Admin</a>
     <a class="navbar-brand" routerLink="/talk" routerLinkActive="active">Talk</a>
     <a class="navbar-brand" routerLink="/slot" routerLinkActive="active">Slot</a>
+    <a class="navbar-brand" routerLink="/ngDrag" routerLinkActive="active">Drag</a>
     <a class="navbar-brand" routerLink="/dragula" routerLinkActive="active">Talk and Slot</a>
-    <a href="https://devoxx.ma/" class="navbar-brand navbar-right"><fa name="arrow-right"></fa>Devoxx Morocco website</a>
+    <a href="https://devoxx.ma/" class="navbar-brand navbar-right">
+      <fa name="arrow-right"></fa>Devoxx Morocco website</a>
   </div>
 </nav>
