the projet is in version 1.0

--- a/src/app/components/ng-drag/ng-drag.component.html
+++ b/src/app/components/ng-drag/ng-drag.component.html
@@ -82,6 +82,7 @@
             <li *ngFor="let item of droppedItems" class="list-group-item">{{item.id}}</li>
           </div>
         </div>
+      </div>
       </div> -->
 
     </div>
